fix charts overlapping(?)

--- a/client/src/components/board-container.styles.scss
+++ b/client/src/components/board-container.styles.scss
@@ -1,6 +1,6 @@
 .board-container {
   display: flex;
   flex-direction: column;
-  flex: 1 1 0px;
+  flex: 1 0;
   overflow: auto;
 }
